--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,6 @@ h1 {
     background-color: #fff;
     padding: 1rem;
     border-radius: 1rem;
-    border: 1px solid gray;
-    -webkit-box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.5); 
-    box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.5);
+    -webkit-box-shadow: 0px 0px 1rem -.5rem rgba(0,0,0,0.5); 
+    box-shadow: 0px 0px 1rem -.5rem rgba(0,0,0,0.5);
 }
